[gd_scene load_steps=2 format=3 uid="uid://c5rl0n3o9w4y6"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 0
offset_right = 300.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -11.5
offset_right = 30.0
offset_bottom = 11.5
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ModeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "A PIE"

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0.0 km/h"

[node name="InteractionHint" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 18
text = "[E] Interactuar"
horizontal_alignment = 1
vertical_alignment = 1
